[tool.poetry]
name = "sub-dom-spy"
version = "0.1.0"
description = ""
authors = ["taylor <tayjaybabee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = '*'
inspy-logger = '*'

[tool.poetry.dev-dependencies]
pytest = "^5.2"
inspy_logger = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
